🚀dealing with export quotes🚀

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "type_traits": "c",
-        "minishell.h": "c"
+        "minishell.h": "c",
+        "cctype": "cpp"
     }
 }
