🎉 all $var stuff seem to be greatly wooorking 🎉

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "type_traits": "c",
         "minishell.h": "c",
         "cctype": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
