--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -18,19 +18,19 @@ INC		= -I includes/
 CFLAGS	= -Wall -Werror -Wextra
 
 %.o: %.c
-		$(CC) $(CFLAGS) $(INC) -o $@ -c $?
+	@$(CC) $(CFLAGS) $(INC) -o $@ -c $?
 
 $(NAME):	$(OBJS)
-		ar rc $(NAME) $(OBJS)
-		ranlib $(NAME)
+	@ar rc $(NAME) $(OBJS)
+	@ranlib $(NAME)
 
 all:		$(NAME)
 
 clean:
-			$(RM) $(OBJS)
+	@$(RM) $(OBJS)
 
 fclean:		clean
-			$(RM) $(NAME)
+	@$(RM) $(NAME)
 
 re:			fclean all
 
